Major overhaul to dockerfile and new entrypoint script